# vlg

./: .gitignore  CMakeLists.txt  README  readme.org
doc/: Doxyfile
doc/paper/: notes.tex  notes.txt
doc/report/: bounding-eccentricities.tex
etc/: valgrind.supp
etc/data/: .#ca-HepTh.txt
etc/script/: gen-build.sh  stat-leaks.sh
ext/igraph-0.9.4/doc/html/: igraph-Advanced.html  igraph-Attributes.html  igraph-Basic.html  igraph-Bipartite.html  igraph-Cliques.html  igraph-Coloring.html  igraph-Community.html  igraph-Data-structures.html  igraph-Error.html  igraph-Flows.html  igraph-Foreign.html  igraph-Generators.html  igraph-HRG.html  igraph-Installation.html  igraph-Isomorphism.html  igraph-Iterators.html  igraph-Layout.html  igraph-Memory.html  igraph-Motifs.html  igraph-Nongraph.html  igraph-Operators.html  igraph-Random.html  igraph-SCG.html  igraph-Separators.html  igraph-Spatial-Games.html  igraph-Structural.html  igraph-Tutorial.html  igraph-Visitors.html  index.html  ix01.html
ext/igraph-0.9.4/src/io/parsers/: dl-lexer.c  dl-lexer.h  dl-parser.c  dl-parser.h  gml-lexer.c  gml-lexer.h  gml-parser.c  gml-parser.h  lgl-lexer.c  lgl-lexer.h  lgl-parser.c  lgl-parser.h  ncol-lexer.c  ncol-lexer.h  ncol-parser.c  ncol-parser.h  pajek-lexer.c  pajek-lexer.h  pajek-parser.c  pajek-parser.h
src/: eccentricity.cc  main.cc  prune.cc  template.cc
src/include/: eccentricity.hh  prune.hh  template.hh
test/: CMakeLists.txt
test/1b/: 1b.cc  CMakeLists.txt
test/1k/: 1k.cc  CMakeLists.txt
test/1m/: 1m.cc  CMakeLists.txt
test/be-test/: CMakeLists.txt  be.cc
test/structure/: .#be.cc  CMakeLists.txt  structure.cc
test/template-test/: CMakeLists.txt  template.cc
